Fixed horizontal layout shift

--- a/styles/index.css
+++ b/styles/index.css
@@ -11,6 +11,10 @@ body {
   @apply bg-gray-50 dark:bg-gray-900;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 /* Write your own custom component styles here */
 
 /* Start purging... */
